--- a/_posts/algorithms/03 코딩과 디버깅에 관하여/3.6_real_number.markdown
+++ b/_posts/algorithms/03 코딩과 디버깅에 관하여/3.6_real_number.markdown
@@ -1,5 +1,6 @@
 ---
-layout: post
 title: 실수 자료형의 이해
-categories: [algorithms, 알고리즘 문제해결전략]
+date: {{ page.last_modified_at }}
+categories: []
+tags: [] 
 ---
