--- a/_posts/2020-10-14-3.6_real_number.md
+++ b/_posts/2020-10-14-3.6_real_number.md
@@ -8,13 +8,16 @@ math: true
 ---
 
 <h3>실수 연산의 어려움</h3>
-```
-int countObvious(int n)
-  int same = 0
-    for int x = 1; x <= n; ++x
-    	double y = 1.0 / x
-        if(y * x == 1.0)
-            ++same;
+````javascript
+function countObvious(n) {
+    let same = 0;
+    for(let x = 1; x <= n; ++x) {
+        let y = 1.0 / x;
+         if(y * x == 1.0) {
+             ++same;
+         }
+    }
 
-  return same
-```
+    return same;
+}
+````
