--- a/_posts/2020-10-14-3.6-실수-연산의-어려움.md
+++ b/_posts/2020-10-14-3.6-실수-연산의-어려움.md
@@ -96,9 +96,9 @@ function countObvious(n) {
 ###### 3.2.2.3.2. 예제
 1. 263.3
     - 263: $$ 1 0000 0111 $$
-    - 0.3: $$ 0.0100 1100 1100 1100\dddot $$
-2. $$ 100000111 . 01001100110011\dddot $$
-    1. $$ 1 . 00000111 01001100110011\dddot $$: 소수점을 앞을 8회 이동
+    - 0.3: $$ 0.0100 1100 1100 1100\dots $$
+2. $$ 100000111 . 01001100110011\dots $$
+    1. $$ 1 . 00000111 01001100110011\dots $$: 소수점을 앞을 8회 이동
     2. 부호비트: 0
     3. 지수 비트:
         - **bias**(32비트의 경우 127 = 0111 1111) + 지수(소수점 이동 횟수) = 127 + 8 = 135 = 1000 0111
@@ -106,7 +106,7 @@ function countObvious(n) {
             - 지수는 **부호 있는 값**이며, 큰 값과 작은 값 모두 표현 가능
             - 하지만 부호 있는 값에서 [**2의 보수**](https://ko.wikipedia.org/wiki/2%EC%9D%98_%EB%B3%B4%EC%88%98)는 비교를 어렵게 함 $$ \Rightarrow $$ 지수를 **부호 없는 수**로 저장하여 비교하기 쉽게 만든다 
             - 즉, 음의 지수 값을 양수로 표현하기 위해 bias를 더한다
-    4. 가수 비트: $$ 00000111 01001100110011\dddot $$ $$
+    4. 가수 비트: $$ 00000111 01001100110011\dots $$ $$
 3. 최종적으로 비트는 다음과 같다
 ```
 부호  지수          가수 비트
