알고리즘 문제해결 전략 03 코딩과 디버깅에 관하여 3.6. 실수자료형의 이해 - math 추가

--- a/_posts/2020-10-14-3.6-실수-연산의-어려움.md
+++ b/_posts/2020-10-14-3.6-실수-연산의-어려움.md
@@ -37,6 +37,27 @@ function countObvious(n) {
 ### 2.2. 실수형
 컴퓨터가 모두 정확하게 표현 불가능
 
+|자료형|부호비트|지수비트|가수비트|지수범위|유효자릿수(십진수)|
+|:---:|:---:|:---:|:---:|:---:|:---:|
+|32비트 실수형|1|8|23자리|$$-2^7+2 \sim 2^7 -1(=-126 \sim 127)$$|6(float)|
+|64비트 실수형|1|11|52자리|$$-2^10+2 \sim 2^10 -1(=-1022 \sim 1023)$$|15(double)|
+|80비트 실수형|1|15|64자리|$$-2^14+2 \sim 2^14 -1(=-16382 \sim 16383)$$|18|
+
+- 32비트의 경우: ([부동 소수점 상수에 대한 제한](https://docs.microsoft.com/ko-kr/cpp/c-language/limits-on-floating-point-constants?view=vs-2019)
+    - 지수 비트
+        - 8비트로 총 256가지 표현 가능하지만, 0 표현 위해 0이 예약되어 있고, 255는 무한대 표현 위해 예약되어 있다
+        - 실제로 사용할 수 있는 범위는 1부터 254까지이며,
+            - 양수 127
+            - 음수 -126
+    - 지수범위: $$-2^{지수비트-1}+2 \sim 2^{지수비트-1}-1$$
+    - 유효자릿수(Significant Digit): 표현할 수 있는 정밀도(Precision)
+            1. 최대: 3.402823466e+38F
+                - 지수부(8): 1111 1110
+                - 가수부(23): 111 1111 1111 1111 1111 1111
+            2. 최소: 1.175494351e-38F
+                - 지수부(8): 0000 0001
+                - 가수부(23): 000 0000 0000 0000 0000 0000
+
 #### 2.2.1 문제점
 **소수점 이하 자릿수 정확도**의 문제
 1. 순환/비순환 무한소수의 경우 소수점 이하 자릿수가 무한함
@@ -88,27 +109,40 @@ function countObvious(n) {
 
 ##### 3.2.2.3. 실수 변수 구조
 ###### 3.2.2.3.1. 저장 정보
-1. $$ 6.62607004 \times 10^{-34} $$
+1. 실수는 $$ 263.3 = 2.633 \times 10^2 $$처럼 정수부와 실수부로 구성
 2. 부호 비트: 양수/음수 여부
-3. 지수(exponent): $$ 10^{-34} $$
-4. 가수(mantissa): $$ 6.62607004 $$
+3. 지수(exponent): $$ 10^2 $$
+4. 가수([mantissa](https://www.scienceall.com/가수mantissa-假數/), 유효숫자): $$ 2.633 \times 10^2 $$에서 2633이 유효 숫자
 
 ###### 3.2.2.3.2. 예제
 1. 263.3
-    - 263: $$ 1 0000 0111 $$
-    - 0.3: $$ 0.0100 1100 1100 1100\dots $$
-2. $$ 100000111 . 01001100110011\dots $$
-    1. $$ 1 . 00000111 01001100110011\dots $$: 소수점을 앞을 8회 이동
-    2. 부호비트: 0
+    - 263: 
+        - 정수부
+        - $$ 1 0000 0111 $$
+    - 0.3:
+        - 소수부 
+        - $$ 0.0100 1100 1100 1100\dots $$
+2. $$ 1 0000 0111 . 01001100110011\dots $$
+    1. $$ 1 . 0000 0111 01001100110011\dots $$: 소수점을 앞을 8회 이동($$ 2^8 $$)
+    2. 부호비트: 0(양수)
     3. 지수 비트:
         - **bias**(32비트의 경우 127 = 0111 1111) + 지수(소수점 이동 횟수) = 127 + 8 = 135 = 1000 0111
         - bias를 더하는 이유는?
             - 지수는 **부호 있는 값**이며, 큰 값과 작은 값 모두 표현 가능
             - 하지만 부호 있는 값에서 [**2의 보수**](https://ko.wikipedia.org/wiki/2%EC%9D%98_%EB%B3%B4%EC%88%98)는 비교를 어렵게 함 $$ \Rightarrow $$ 지수를 **부호 없는 수**로 저장하여 비교하기 쉽게 만든다 
             - 즉, 음의 지수 값을 양수로 표현하기 위해 bias를 더한다
-    4. 가수 비트: $$ 00000111 01001100110011\dots $$ $$
+    4. 가수 비트: $$ 0000 0111 01001100110011\dots $$
 3. 최종적으로 비트는 다음과 같다
 ```
 부호  지수          가수 비트
 0     1000 0111    00000111 01001100110011
 ```
+
+## 기타 링크
+1. [부동 소수점, 부동점 수, 부동소수점 표현](http://www.ktword.co.kr/abbr_view.php?m_temp1=1067)
+2. [ IEEE 부동소수점, 컴퓨터 2진 부동소수점 표현](http://www.ktword.co.kr/abbr_view.php?nav=&m_temp1=4886&id=122)
+3. [부동소수점](https://pang2h.tistory.com/293)
+4. [부동 소수점 계산의 정밀도 및 정확도](https://docs.microsoft.com/ko-kr/office/troubleshoot/access/floating-calculations-info)
+5. [float의 한계...](https://gpgstudy.com/forum/viewtopic.php?t=1651)
+6. [[IEEE 754] floating point의 이해 (1)](http://studyfoss.egloos.com/4956717))
+7. [double vs float 정수형의 표현 범위. ](http://blog.daum.net/iiiiiiiiiiiiiii99/16590270)
