--- a/_posts/2020-10-14-3.6-실수-연산의-어려움.md
+++ b/_posts/2020-10-14-3.6-실수-연산의-어려움.md
@@ -3,6 +3,7 @@ title: 3.6. 실수 자료형의 이해
 author: aimpugn
 date: 2020-10-14 11:27:00 +0900
 categories: [알고리즘 문제해결전략]
+tags: [algotithms]
 math: true
 use_math: true
 ---
