알고리즘 문제해결 전략 03 코딩과 디버깅에 관하여 3.6. 실수자료형의 이해 - Trending tag 삭제

--- a/_posts/2020-10-14-3.6-실수-연산의-어려움.md
+++ b/_posts/2020-10-14-3.6-실수-연산의-어려움.md
@@ -24,7 +24,7 @@ function countObvious(n) {
 }
 ```
 
-1. $$ \frac {1} {x} \times x $$인 x의 개수를 세는 함수
+1. $$ \frac {1} {x} \times{x} $$인 x의 개수를 세는 함수
 2. countObvious(50)? 49
     - ~~버그인가?~~
     - ~~CPU의 문제인가?~~
@@ -109,7 +109,7 @@ function countObvious(n) {
 
 ##### 3.2.2.3. 실수 변수 구조
 ###### 3.2.2.3.1. 저장 정보
-1. 실수는 $$ 263.3 = 2.633 \times 10^2 $$처럼 정수부와 실수부로 구성
+1. 실수는 $$ 263.3 = 2.633\times{10^2} $$처럼 정수부와 실수부로 구성
 2. 부호 비트: 양수/음수 여부
 3. 지수(exponent): $$ 10^2 $$
 4. 가수([mantissa](https://www.scienceall.com/가수mantissa-假數/), 유효숫자): $$ 2.633 \times 10^2 $$에서 2633이 유효 숫자
@@ -118,12 +118,12 @@ function countObvious(n) {
 1. 263.3
     - 263: 
         - 정수부
-        - $$ 1 0000 0111 $$
+        - 1 0000 0111
     - 0.3:
         - 소수부 
-        - $$ 0.0100 1100 1100 1100\dots $$
-2. $$ 1 0000 0111 . 01001100110011\dots $$
-    1. $$ 1 . 0000 0111 01001100110011\dots $$: 소수점을 앞을 8회 이동($$ 2^8 $$)
+        - 0.0100 1100 1100 1100
+2. 1 0000 0111 . 01001100110011... 
+    1. 1 . 0000 0111 0100 1100 1100 11...: 소수점을 앞을 8회 이동($$ 2^8 $$)
     2. 부호비트: 0(양수)
     3. 지수 비트:
         - **bias**(32비트의 경우 127 = 0111 1111) + 지수(소수점 이동 횟수) = 127 + 8 = 135 = 1000 0111
@@ -131,12 +131,42 @@ function countObvious(n) {
             - 지수는 **부호 있는 값**이며, 큰 값과 작은 값 모두 표현 가능
             - 하지만 부호 있는 값에서 [**2의 보수**](https://ko.wikipedia.org/wiki/2%EC%9D%98_%EB%B3%B4%EC%88%98)는 비교를 어렵게 함 $$ \Rightarrow $$ 지수를 **부호 없는 수**로 저장하여 비교하기 쉽게 만든다 
             - 즉, 음의 지수 값을 양수로 표현하기 위해 bias를 더한다
-    4. 가수 비트: $$ 0000 0111 01001100110011\dots $$
+    4. 가수 비트: 0000 0111 01001100110011...
 3. 최종적으로 비트는 다음과 같다
 ```
-부호  지수          가수 비트
-0     1000 0111    00000111 01001100110011
+부호(1)   지수(8)        가수 비트(23)
+0        1000 0111      0000 0111 0100 1100 1100 110
 ```
+
+## 실수 비교하기
+### countObvious 함수
+1. $$ \frac{1}{10}\times{3} $$과 $$ \frac{3}{10} $$을 비교할 떄 둘 모두 신수 변수에 정확하게 담을 수 없으며, **표현할 수 있는 가장 가까운 실수로 근사**해 표현
+    1. $$ \frac{1}{10}\times{3} $$ 참 값보다 약간 큰 값
+        1. $$ \frac{1}{10} $$
+        ```
+        $$ 0.1\times{2} $$ = 0.2, Integral part: 0
+        $$ 0.2\times{2} $$ = 0.4, Integral part: 0
+        $$ 0.4\times{2} $$ = 0.8, Integral part: 0
+        $$ 0.8\times{2} $$ = 1.6, Integral part: 1
+        $$ 0.6\times{2} $$ = 1.2, Integral part: 1
+        $$ 0.2\times{2} $$ = 0.4, Integral part: 0
+        $$ 0.000110...\times{3} $$
+       ```
+       2. 3 = 0011
+       3. $$0.000110\dots\times{0011}$$
+    2. $$ \frac{3}{10} $$ 참 값보다 작은 값
+        1. $$ \frac{3}{10} $$
+        ```
+        $$ \frac{3}{10} $$
+        $$ 0.3\times{2} $$ = 0.6, Integral part: 0
+        $$ 0.6\times{2} $$ = 1.2, Integral part: 1
+        $$ 0.2\times{2} $$ = 0.4, Integral part: 0
+        $$ 0.4\times{2} $$ = 0.8, Integral part: 0
+        $$ 0.8\times{2} $$ = 1.6, Integral part: 1
+        $$ 0.6\times{2} $$ = 1.2, Integral part: 1
+        0.10011
+       ```
+
 
 ## 기타 링크
 1. [부동 소수점, 부동점 수, 부동소수점 표현](http://www.ktword.co.kr/abbr_view.php?m_temp1=1067)
