--- a/docs/_posts/troubleshooting/2020-10-27-ts-php.md
+++ b/docs/_posts/troubleshooting/2020-10-27-ts-php.md
@@ -1,6 +1,6 @@
 ---
-Title: troubleshooting php
-Author: aimpugn
+title: troubleshooting php
+author: aimpugn
 date: 2020-10-27 08:10:00 +0900
 categories: [troubleshooting.php]
 tags: [php, troubleshooting]
