--- a/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
+++ b/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
@@ -2,7 +2,7 @@
 title: Pythin Algorithms Interview ch4.BigO
 author: aimpugn
 date: 2020-12-21 23:18:00+0900
-math: true
+use_math: true
 categories: [algorithms]
 ---
 
@@ -116,11 +116,11 @@ categories: [algorithms]
 #### 배열의 확장은 ${log_2 n}$보다 클 수 없다
 
 - 처음 사이즈가 2라고 한다면
-  $ 2 \to 4 $
-$ 4 \to 8 $
-$ 8 \to 16 $
-$ \dots $
-$ 2^{i} \to 2^{i+1} $
+$$ 2 \to 4 $$
+$$ 4 \to 8 $$
+$$ 8 \to 16 $$
+$$ \dots $$
+$$ 2^{i} \to 2^{i+1} $$
 - n이 입력된 후, 더블링이 되므로 `A` 배열의 크기는 최대 2n이 된다
   $ 2^{i+1} \le 2n $
 $ {\log_2 2^{i+1}} \le {log_2 2n} $
