--- a/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
+++ b/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
@@ -39,7 +39,7 @@ categories: [algorithms]
 
 - 최고차항만 표기하며 상수항은 무시
 
-```
+```s
 4n^2 + 3n + 4 -> 4n^2 -> n^2 -> O(n^2)
 ```
 
@@ -113,43 +113,43 @@ categories: [algorithms]
     - c: 비용
     - n: 요소 개수
 
-#### 배열의 확장은 ${log_2 n}$보다 클 수 없다
+#### 배열의 확장은 $${log_2 n}$$보다 클 수 없다
 
 - 처음 사이즈가 2라고 한다면
-$$ 2 \to 4 $$
-$$ 4 \to 8 $$
-$$ 8 \to 16 $$
-$$ \dots $$
-$$ 2^{i} \to 2^{i+1} $$
+$$ \\2 \to 4 \\$$
+$$ 4 \to 8 \\$$
+$$ 8 \to 16 \\$$
+$$ \dots \\ $$
+$$ 2^{i} \to 2^{i+1} \\$$
 - n이 입력된 후, 더블링이 되므로 `A` 배열의 크기는 최대 2n이 된다
-  $ 2^{i+1} \le 2n $
-$ {\log_2 2^{i+1}} \le {log_2 2n} $
-$ {i} \le {log_2 n} $
-따라서 ${log_2 n}$보다 큰 배열 확장은 없다
+$$\\ 2^{i+1} \le 2n \\$$
+$$ {\log_2 2^{i+1}} \le {log_2 2n} \\$$
+$$ {i} \le {log_2 n} \\$$
+따라서 $${log_2 n}$$보다 큰 배열 확장은 없다
 
 #### n 개의 삽입에 대한 총 비용 한계
 
-$ \sum\limits_{i=1}^n O(1) + \sum\limits_{i=1}^{\log_2 n} {c}\cdot{2^i} = O(n)$
+$$ \sum\limits_{i=1}^n O(1) + \sum\limits_{i=1}^{\log_2 n} {c}\cdot{2^i} = O(n)$$
 
 - 첫번째 파트(_삽입_)는 각 삽입에 대한 필수적인 상수 소요 시간
 - 두번째 파트(_복사_)는 **앞서 이미** 확장에 소요했던 총 비용
 - 따라서 첫번째 파트는 다음과 같이 계산되고
   $O(1 + 1 + 1 + 1 + \dots) = O(n)$
 - 두번째 파트는 다음과 같이 계산된다
-  $ n = 2 \to {c}\cdot{2^{1}} $
-$ n = 3 \to {c}\cdot{2^{1}} $
-$ n = 4 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} $
-$ n = 5 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} $
-$ n = 6 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} $
-$ n = 7 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} $
-$ n = 8 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} + {c}\cdot{2^{3}} $
-$\dots$
-$O(1 + 1\cdot2^{1} + 1\cdot2^{2} + 1\cdot2^{log_2n} - 1)$ // -1은 왜 붙지?
-  $= O(\frac{1 - 2^{log_2n + 1}}{1 - 2} - 1)$
-  $= O(2\cdot2^{log_2n})$
+$$ \\n = 2 \to {c}\cdot{2^{1}} \\$$
+$$ n = 3 \to {c}\cdot{2^{1}} \\$$
+$$ n = 4 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} \\$$
+$$ n = 5 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} \\$$
+$$ n = 6 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} \\$$
+$$ n = 7 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} \\$$
+$$ n = 8 \to {c}\cdot{2^{1}} + {c}\cdot{2^{2}} + {c}\cdot{2^{3}} \\$$
+$$ \dots \\$$
+$$ O(1 + 1\cdot2^{1} + 1\cdot2^{2} + 1\cdot2^{log_2n} - 1) $$ // -1은 왜 붙지?
+$$\\ = O(\frac{1 - 2^{log_2n + 1}}{1 - 2} - 1) \\$$
+$$ = O(2\cdot2^{log_2n})\\ $$
 - 첫번째 파트와 두번째 파트를 합하면
-  $= O(n + 2\cdot2^{log_2n}) $
-$= O(n) $
+$$ = O(n + 2\cdot2^{log_2n}) \\$$
+$$ = O(n) \\$$
 
 ## 참고
 
