--- a/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
+++ b/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
@@ -134,7 +134,7 @@ $$ \sum\limits_{i=1}^n O(1) + \sum\limits_{i=1}^{\log_2 n} {c}\cdot{2^i} = O(n)$
 - 첫번째 파트(_삽입_)는 각 삽입에 대한 필수적인 상수 소요 시간
 - 두번째 파트(_복사_)는 **앞서 이미** 확장에 소요했던 총 비용
 - 따라서 첫번째 파트는 다음과 같이 계산되고
-  $O(1 + 1 + 1 + 1 + \dots) = O(n)$
+$$\\ O(1 + 1 + 1 + 1 + \dots) = O(n) \\$$
 - 두번째 파트는 다음과 같이 계산된다
 $$ \\n = 2 \to {c}\cdot{2^{1}} \\$$
 $$ n = 3 \to {c}\cdot{2^{1}} \\$$
