--- a/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
+++ b/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
@@ -1,5 +1,5 @@
 ---
-title: Pythin Algorithms Interview ch4.BigO
+title: Python Algorithms Interview ch4.BigO
 author: aimpugn
 date: 2020-12-21 23:18:00+0900
 use_math: true
