1. java 빌그 관련 옵션 정리 2. PAI 연결 리스트 추가 3. 기타 수정

--- a/docs/_posts/algorithms/2020-10-14-APSS-3.6.Understand_real_number.md
+++ b/docs/_posts/algorithms/2020-10-14-APSS-3.6.Understand_real_number.md
@@ -7,6 +7,27 @@ tags: [algotithms]
 math: true
 use_math: true
 ---
+- [1. 실수 연산의 어려움](#1-실수-연산의-어려움)
+- [2. 실술와 근사값](#2-실술와-근사값)
+  - [2.1. 정수형](#21-정수형)
+  - [2.2. 실수형](#22-실수형)
+    - [2.2.1 문제점](#221-문제점)
+    - [2.2.2. 영향 요소](#222-영향-요소)
+- [3. IEEE 754 표준](#3-ieee-754-표준)
+  - [3.1. 내용](#31-내용)
+  - [3.2. 특징](#32-특징)
+    - [3.2.1. 이진수로 실수 표기](#321-이진수로-실수-표기)
+    - [3.2.2. 부동 소수점(floating-point) 표기법](#322-부동-소수점floating-point-표기법)
+      - [3.2.2.1. 문제점](#3221-문제점)
+      - [3.2.2.2. 해결](#3222-해결)
+        - [3.2.2.2.1. 방식](#32221-방식)
+        - [3.2.2.2.2. 예제](#32222-예제)
+      - [3.2.2.3. 실수 변수 구조](#3223-실수-변수-구조)
+        - [3.2.2.3.1. 저장 정보](#32231-저장-정보)
+        - [3.2.2.3.2. 예제](#32232-예제)
+- [실수 비교하기](#실수-비교하기)
+  - [countObvious 함수](#countobvious-함수)
+- [기타 링크](#기타-링크)
 
 ## 1. 실수 연산의 어려움
 
@@ -157,6 +178,7 @@ function countObvious(n) {
 1. $$ \frac{1}{10}\times{3} $$과 $$ \frac{3}{10} $$을 비교할 떄 둘 모두 신수 변수에 정확하게 담을 수 없으며, **표현할 수 있는 가장 가까운 실수로 근사**해 표현
    1. $$ \frac{1}{10}\times{3} $$ 참 값보다 약간 큰 값
       1. $$ \frac{1}{10} $$
+
       ```
       $$ 0.1\times{2} $$ = 0.2, Integral part: 0
       $$ 0.2\times{2} $$ = 0.4, Integral part: 0
@@ -166,10 +188,12 @@ function countObvious(n) {
       $$ 0.2\times{2} $$ = 0.4, Integral part: 0
       $$ 0.000110...\times{3} $$
       ```
+
       2. 3 = 0011
       3. $$0.000110\dots\times{0011}$$
    2. $$ \frac{3}{10} $$ 참 값보다 작은 값
       1. $$ \frac{3}{10} $$
+
       ```
       $$ \frac{3}{10} $$
       $$ 0.3\times{2} $$ = 0.6, Integral part: 0
@@ -184,9 +208,9 @@ function countObvious(n) {
 ## 기타 링크
 
 1. [부동 소수점, 부동점 수, 부동소수점 표현](http://www.ktword.co.kr/abbr_view.php?m_temp1=1067)
-2. [ IEEE 부동소수점, 컴퓨터 2진 부동소수점 표현](http://www.ktword.co.kr/abbr_view.php?nav=&m_temp1=4886&id=122)
+2. [IEEE 부동소수점, 컴퓨터 2진 부동소수점 표현](http://www.ktword.co.kr/abbr_view.php?nav=&m_temp1=4886&id=122)
 3. [부동소수점](https://pang2h.tistory.com/293)
 4. [부동 소수점 계산의 정밀도 및 정확도](https://docs.microsoft.com/ko-kr/office/troubleshoot/access/floating-calculations-info)
 5. [float의 한계...](https://gpgstudy.com/forum/viewtopic.php?t=1651)
 6. [[IEEE 754] floating point의 이해 (1)](http://studyfoss.egloos.com/4956717))
-7. [double vs float 정수형의 표현 범위. ](http://blog.daum.net/iiiiiiiiiiiiiii99/16590270)
+7. [double vs float 정수형의 표현 범위.](http://blog.daum.net/iiiiiiiiiiiiiii99/16590270)
