--- a/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
+++ b/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
@@ -6,6 +6,16 @@ use_math: true
 categories: [algorithms]
 ---
 
+- [문제](#문제)
+  - [제한](#제한)
+- [고민](#고민)
+- [풀이](#풀이)
+  - [두 포인터 사용한 풀이](#두-포인터-사용한-풀이)
+  - [스택 사용한 풀이](#스택-사용한-풀이)
+  - [true/false 토글 활용](#truefalse-토글-활용)
+- [기타](#기타)
+  - [Time limit case](#time-limit-case)
+
 ## 문제
 
 - [빗물 트래핑](https://leetcode.com/problems/trapping-rain-water/)
