--- a/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
+++ b/docs/_posts/algorithms/2020-12-21-PAI-ch4.BigO.md
@@ -5,6 +5,25 @@ date: 2020-12-21 23:18:00+0900
 use_math: true
 categories: [algorithms]
 ---
+- [개요](#개요)
+- [Big O](#big-o)
+  - [정의](#정의)
+  - [점근적 실행 시간](#점근적-실행-시간)
+    - [개념](#개념)
+    - [방법](#방법)
+    - [종류](#종류)
+  - [공간 복잡도](#공간-복잡도)
+- [상한과 최악](#상한과-최악)
+  - [상한](#상한)
+  - [빅오 표기법과 최악](#빅오-표기법과-최악)
+- [분할 상환 분석](#분할-상환-분석)
+  - [개요](#개요-1)
+  - [동적 배열](#동적-배열)
+  - [증명](#증명)
+    - [n-th 요소 삽입 시 삽입 비용](#n-th-요소-삽입-시-삽입-비용)
+    - [배열의 확장은 $${log_2 n}$$보다 클 수 없다](#배열의-확장은-log_2-n보다-클-수-없다)
+    - [n 개의 삽입에 대한 총 비용 한계](#n-개의-삽입에-대한-총-비용-한계)
+- [참고](#참고)
 
 ## 개요
 
