타이틀 수정

--- a/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
+++ b/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
@@ -1,5 +1,5 @@
 ---
-title: Ch.7 8번
+title: ch7 42 빗물 트래핑
 author: aimpugn
 date: 2021-01-18 23:00:00+0900
 use_math: true
@@ -28,7 +28,7 @@ categories: [algorithms]
 ### 제한
 
 - n == height.length
-- 0 <= n <= 3 * 104
+- 0 <= n <= 3 \* 104
 - 0 <= height[i] <= 105
 
 ## 고민
@@ -53,7 +53,7 @@ def trap_my(self, height: List[int]) -> int:
             if (end - start) == 1:
                 start = end
                 continue
-            elif end > -1: 
+            elif end > -1:
                 # 너비가 2 이상이고, 같거나 더 큰 막대기가 있는 경우
                 width = end - start - 1
                 # 현재 구간의 최대 높이를 구한다
@@ -89,7 +89,7 @@ def trap_my(self, height: List[int]) -> int:
 4 1 1 2 3 (O) > 4와 3 사이에 구간 성립
 4 1 3 2 1 (O) > 4와 3 사이에 구간
 2 1 1 1 X
-끝은 어디로? 
+끝은 어디로?
 1. 시작 지점 높이와 같거나 보다 큰 경우
 2. 마지막 인덱스까지 도달한 경우?
     2.1. 시작점 다음 높이보다 마지막 인덱스가 높은 경우 구간 성립
@@ -141,7 +141,7 @@ def get_next_idx(self, start: int, height: List[int]) -> int:
 def trap(self, height: List[int]) -> int:
     if not height:
         return 0
-    
+
     # 최대 높이의 막대까지 좌/우 기둥 최대 높이가 현재 높이와의 차이만큼 물 높이 volume을 더해간다
     volume = 0
     left, right = 0, len(height) - 1
@@ -161,7 +161,7 @@ def trap(self, height: List[int]) -> int:
         else:
             volume += right_max - height[right]
             right -= 1
-    
+
     return volume
 ```
 
@@ -181,7 +181,7 @@ def trap_stack(self, height: List[int]) -> int:
     for current in range(height_len):
         hr = "================== %d ==================" % (self.loop_cnt_to_print)
         self.loop_cnt_to_print += 1
-        
+
         # 현재 높이보다 이전 스택에 쌓인 높이가 작으면 통과
         loop_cnt = 0
         while True:
@@ -198,13 +198,13 @@ def trap_stack(self, height: List[int]) -> int:
                 break
             if height[stack[-1]] >= height[current]:
                 self.print_rain_trap_matrix(title, height, stack, current)
-                # 최근 스택의 막대기 높이가 현재 높이보다 크거나 같다? 
+                # 최근 스택의 막대기 높이가 현재 높이보다 크거나 같다?
                 print("height[recent yellow] >= height[red]")
                 print("height[%d] >= height[%d]" % (stack[-1], current))
                 print("%d >= %d" % (height[stack[-1]], height[current]))
                 print("break")
                 break
-                
+
             # 현재 높이가 최근 스택의 높이보다 크다? `물이 고여 있다`고 볼 수 있다
             # 내려갔다가 다시 올라오는 지점
             self.print_rain_trap_matrix(title, height, stack, current)
@@ -249,7 +249,7 @@ def trap_stack(self, height: List[int]) -> int:
 # 노랑: 쌓인 스택
 # 빨강: stack.pop()된 현재 인덱스
 # 파랑: 물
-# 문자열 색상 처리: 
+# 문자열 색상 처리:
 # - https://stackoverflow.com/a/48723099
 # - https://stackoverflow.com/a/21786287
 def print_rain_trap_matrix(self, title: str = "", height: List[int] = [], stack: List[int] = [], current: int = -1, top: int = -1):
@@ -281,11 +281,11 @@ def print_rain_trap_matrix(self, title: str = "", height: List[int] = [], stack:
             # 현재 높이가 y축의 높이보다 크거나 같은 경우
             if h >= height_max - i:
                 if not is_open:
-                    # 높이가 있는데 구간이 열린 적 없는 경우 구간 계산 시작 
+                    # 높이가 있는데 구간이 열린 적 없는 경우 구간 계산 시작
                     is_open = True
                     start = idx_curr
                 elif width == 0:
-                    # 열린 후 width 증가가 없으면 현재 높이가 이전 높이와 같거나 더 높다는 의미이므로 시작점을 현재로 잡는다 
+                    # 열린 후 width 증가가 없으면 현재 높이가 이전 높이와 같거나 더 높다는 의미이므로 시작점을 현재로 잡는다
                     start = idx_curr
                 elif not is_close:
                     # 열린 후 width가 증가했으면
@@ -313,13 +313,13 @@ def print_rain_trap_matrix(self, title: str = "", height: List[int] = [], stack:
                 trace_str_line.append(str(0))
 
             idx_curr += 1
-        
+
         if len(waters) > 0:
             for w in waters:
                 volume += 1
                 trace_str_line[w] = '\x1b[0;37;44m' + str(1) + '\x1b[0m'
         trace_str += ''. join(trace_str_line) + " \n"
-    
+
     stack_arr = []
     for i in range(height_len):
         stack_arr.append(str(i))
@@ -331,7 +331,7 @@ def print_rain_trap_matrix(self, title: str = "", height: List[int] = [], stack:
         stack_arr[current] = '\x1b[1;31;41m \x1b[0m'
     if top >= 0:
         stack_arr[top] = '\x1b[7;36;43m \x1b[0m'
-    
+
     stack_str = ''.join(stack_arr)
     trace_str += stack_str
     print(trace_str)
@@ -359,7 +359,7 @@ def print_rain_trap_matrix(self, title: str = "", height: List[int] = [], stack:
 ### true/false 토글 활용
 
 ```python
-# 시간 초과이므로 풀이는 아니다. 
+# 시간 초과이므로 풀이는 아니다.
 # Time Limit Exceeded
 # 319 / 320 test cases passed.
 def trap_my(self, height: List[int]) -> int:
@@ -389,11 +389,11 @@ def trap_my(self, height: List[int]) -> int:
             # 현재 높이가 y축의 높이보다 크거나 같은 경우
             if h >= height_max - i:
                 if not is_open:
-                    # 높이가 있는데 구간이 열린 적 없는 경우 구간 계산 시작 
+                    # 높이가 있는데 구간이 열린 적 없는 경우 구간 계산 시작
                     is_open = True
                     start = idx_curr
                 elif width == 0:
-                    # 열린 후 width 증가가 없으면 현재 높이가 이전 높이와 같거나 더 높다는 의미이므로 시작점을 현재로 잡는다 
+                    # 열린 후 width 증가가 없으면 현재 높이가 이전 높이와 같거나 더 높다는 의미이므로 시작점을 현재로 잡는다
                     start = idx_curr
                 elif not is_close:
                     # 열린 후 width가 증가했으면
