실패한 코드 명시

--- a/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
+++ b/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
@@ -9,6 +9,7 @@ categories: [algorithms]
 - [문제](#문제)
   - [제한](#제한)
 - [고민](#고민)
+  - [실패한 코드](#실패한-코드)
 - [풀이](#풀이)
   - [두 포인터 사용한 풀이](#두-포인터-사용한-풀이)
   - [스택 사용한 풀이](#스택-사용한-풀이)
@@ -36,8 +37,9 @@ categories: [algorithms]
 - 처음에는 단순히 하나의 포인터를 좌에서 우로 포인터가 이동하면서 *물이 고일 수 있는 다음 인덱스*를 찾으려고 함
 - 하지만 하나의 포인터만 사용했을 때, 빗물 모이는 구간이 닫히는 막대기의 조건을 구하기 어려웠다
 
+### 실패한 코드
+
 ```python
-# 실패한 코드
 def trap_my(self, height: List[int]) -> int:
     ans = 0
     # 감싸진 구간을 찾는다
