24번, 328번 문제 풀이 추가 연결 리스트 추가 조사 및 정리 기타 문서 정리

--- a/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
+++ b/docs/_posts/algorithms/2021-01-18-PAI-ch7-42.md
@@ -21,10 +21,7 @@ categories: [algorithms]
 
 - [빗물 트래핑](https://leetcode.com/problems/trapping-rain-water/)
 
-"""
-각 막대기의 너비가 1인 고도지도(입면지도, elevation map)를 나타내는 음이 아닌 n이 주어졌을 때,
-비가 온 후 얼마나 많은 물을 가둘 수 있는지 계산
-"""
+> 각 막대기의 너비가 1인 고도지도(입면지도, elevation map)를 나타내는 음이 아닌 n이 주어졌을 때, 비가 온 후 얼마나 많은 물을 가둘 수 있는지 계산
 
 ### 제한
 
