--- a/docs/_posts/algorithms/2021-02-07-PAI-ch6-5.md
+++ b/docs/_posts/algorithms/2021-02-07-PAI-ch6-5.md
@@ -142,3 +142,20 @@ time_limit_case = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 
 </p>
 </details>
+
+<details>
+<summary>I could use some help...</summary>
+<p>
+
+```c#
+public class Order
+{
+    public int OrderId { get; set; }
+    public int CustomerId { get; set; }
+
+    public List<int> Products { get; set; }
+}
+\```
+
+</p>
+</details>
