--- a/docs/_posts/algorithms/2021-02-17-PAI-ch11-706.md
+++ b/docs/_posts/algorithms/2021-02-17-PAI-ch11-706.md
@@ -6,6 +6,16 @@ use_math: true
 categories: [PAI, algorithms]
 ---
 
+- [해시맵 디자인](#해시맵-디자인)
+  - [문제](#문제)
+  - [조건](#조건)
+  - [예제](#예제)
+  - [해결](#해결)
+    - [1st](#1st)
+      - [1.1 해결해야 할 사항](#11-해결해야-할-사항)
+      - [1.2 생각](#12-생각)
+      - [1.3 구현](#13-구현)
+
 # [해시맵 디자인](https://leetcode.com/problems/design-hashmap/)
 
 ## 문제
