--- a/docs/_posts/algorithms/2021-02-17-PAI-ch11-706.md
+++ b/docs/_posts/algorithms/2021-02-17-PAI-ch11-706.md
@@ -15,6 +15,13 @@ categories: [PAI, algorithms]
       - [1.1 해결해야 할 사항](#11-해결해야-할-사항)
       - [1.2 생각](#12-생각)
       - [1.3 구현](#13-구현)
+        - [1.3.1 hash function](#131-hash-function)
+        - [1.3.2 자바에서의 hash](#132-자바에서의-hash)
+          - [HashTable.class](#hashtableclass)
+          - [Array.class의 hashCode](#arrayclass의-hashcode)
+          - [String.class의 hashCode](#stringclass의-hashcode)
+          - [StringLatin1.class](#stringlatin1class)
+          - [StringUTF8.class](#stringutf8class)
 
 # [해시맵 디자인](https://leetcode.com/problems/design-hashmap/)
 
@@ -101,3 +108,202 @@ def lookup(d, key):
 ```
 
 #### 1.3 구현
+
+##### 1.3.1 hash function
+
+- 무조건 복잡한 게 좋을까? 연산 속도를 고려하면 그렇지 않다. 목적은 빠르게 위치를 찾는 것
+- dictionary가 아닌 array를 사용할 것이므로, 우선 인덱스를 구해야 한다
+- 막연하니 자바를 참고해 보자
+
+##### 1.3.2 자바에서의 hash
+
+###### HashTable.class
+
+```java
+public synchronized V put(K key, V value) {
+    // Make sure the value is not null
+    if (value == null) {
+        throw new NullPointerException();
+    }
+
+    // Makes sure the key is not already in the hashtable.
+    Entry<?,?> tab[] = table;
+    int hash = key.hashCode();
+    int index = (hash & 0x7FFFFFFF) % tab.length;
+    @SuppressWarnings("unchecked")
+    Entry<K,V> entry = (Entry<K,V>)tab[index];
+    for(; entry != null ; entry = entry.next) {
+        if ((entry.hash == hash) && entry.key.equals(key)) {
+            V old = entry.value;
+            entry.value = value;
+            return old;
+        }
+    }
+
+    addEntry(hash, key, value, index);
+    return null;
+}
+
+private void addEntry(int hash, K key, V value, int index) {
+  Entry<?,?> tab[] = table;
+  if (count >= threshold) {
+      // Rehash the table if the threshold is exceeded
+      rehash();
+
+      tab = table;
+      hash = key.hashCode();
+      index = (hash & 0x7FFFFFFF) % tab.length;
+  }
+
+  // Creates the new entry.
+  @SuppressWarnings("unchecked")
+  Entry<K,V> e = (Entry<K,V>) tab[index];
+  tab[index] = new Entry<>(hash, key, value, e);
+  count++;
+  modCount++;
+}
+```
+
+###### Array.class의 hashCode
+
+```java
+public static int hashCode(Object a[]) {
+    if (a == null)
+        return 0;
+
+    int result = 1;
+
+    for (Object element : a)
+        result = 31 * result + (element == null ? 0 : element.hashCode());
+
+    return result;
+}
+```
+
+###### String.class의 hashCode
+
+```java
+/**
+ * String.class 
+*/
+public int hashCode() {
+    // The hash or hashIsZero fields are subject to a benign data race,
+    // making it crucial to ensure that any observable result of the
+    // calculation in this method stays correct under any possible read of
+    // these fields. Necessary restrictions to allow this to be correct
+    // without explicit memory fences or similar concurrency primitives is
+    // that we can ever only write to one of these two fields for a given
+    // String instance, and that the computation is idempotent and derived
+    // from immutable state
+    int h = hash;
+    if (h == 0 && !hashIsZero) {
+        h = isLatin1() ? StringLatin1.hashCode(value)
+                        : StringUTF16.hashCode(value);
+        if (h == 0) {
+            hashIsZero = true;
+        } else {
+            hash = h;
+        }
+    }
+    
+    return h;
+}
+```
+
+###### StringLatin1.class
+
+```java
+public static int hashCode(byte[] value) {
+    int h = 0;
+    for (byte v : value) {
+        h = 31 * h + (v & 0xff); // 0xff = 255
+    }
+    return h;
+}
+```
+
+###### StringUTF8.class
+
+```java
+public static int hashCode(byte[] value) {
+    int h = 0;
+    int length = value.length >> 1;
+    for (int i = 0; i < length; i++) {
+        h = 31 * h + getChar(value, i);
+    }
+    return h;
+}
+@HotSpotIntrinsicCandidate
+// intrinsic performs no bounds checks
+static char getChar(byte[] val, int index) {
+    assert index >= 0 && index < length(val) : "Trusted caller missed bounds check";
+    index <<= 1;
+    return (char)(((val[index++] & 0xff) << HI_BYTE_SHIFT) |
+                  ((val[index]   & 0xff) << LO_BYTE_SHIFT));
+}
+```
+
+- `0x7FFFFFFF` 값은 10진수 2,147,483,647 정수를 16진수로 나타낸 것
+  - 왜? `0x7FFFFFFF`는 **부호 비트를 제외**한 32비트 정수 집합의 모든 비트를 가진다
+  - 부호 비트가 없으므로 `&` 연산 시 부호 비트는 0이 되며, 언제나 양의 정수가 된다
+
+```python
+# https://myshell.co.uk/blog/2018/11/python-f-string-formatting-cheatsheet/ 
+def print_bitwise(a, op = None, b = None):
+    print('============================================')
+    print("a: ", a, ",op: ", op, ",b: ", b)
+    if a:
+        print(f"{a:32b}")
+    if b:
+        print(f"{b:32b}")
+
+
+    if a and b and op:
+        print('--------------------------------------------')
+        if op == '&':
+            result = a & b
+        elif op == '|':
+            result == a | b
+        print(f"{result:32b}")
+        print(f"{result:n}")
+
+print_bitwise(222)
+'''
+============================================
+a:  222 ,op:  None ,b:  None
+                        11011110
+'''
+
+print_bitwise(-222)
+'''
+============================================
+a:  -222 ,op:  None ,b:  None
+                       -11011110
+'''
+
+print_bitwise(222, '&', 0xffffffff)
+'''
+============================================
+a:  222 ,op:  & ,b:  4294967295
+                        11011110
+11111111111111111111111111111111
+--------------------------------------------
+                        11011110
+222
+'''
+
+print_bitwise(-222, '&', 0xffffffff)
+'''
+============================================
+a:  -222 ,op:  & ,b:  4294967295
+                       -11011110
+11111111111111111111111111111111
+--------------------------------------------
+11111111111111111111111100100010
+4294967074
+'''
+```
+
+- 자바에서는 해시 테이블의 인덱스 구하기 위해서
+  - 키 오브젝트의 hashCode() 정수 값을 가져오고
+  - 그 정수 값과 `0x7FFFFFFF`와 비트연산 후 테이블의 크기로 모듈러 연산
