--- a/docs/_posts/algorithms/2021-02-07-PAI-ch9-232.md
+++ b/docs/_posts/algorithms/2021-02-07-PAI-ch9-232.md
@@ -1,12 +1,12 @@
 ---
-title: 225 큐를 이용한 스택 구현
+title: 232 스택을 이용한 큐 구현
 author: aimpugn
 date: 2021-02-07 19:50:00+0900
 use_math: true
 categories: [PAI, algorithms]
 ---
 
-- [스택을 이용한 큐 구현](#스택을-이용한-큐-구현)
+- [232 스택을 이용한 큐 구현](#232-스택을-이용한-큐-구현)
   - [문제](#문제)
   - [조건](#조건)
   - [예제](#예제)
@@ -16,7 +16,7 @@ categories: [PAI, algorithms]
     - [코드](#코드)
     - [결과](#결과)
 
-# [스택을 이용한 큐 구현](https://leetcode.com/problems/implement-queue-using-stacks)
+# [232 스택을 이용한 큐 구현](https://leetcode.com/problems/implement-queue-using-stacks)
 
 ## 문제
 
