--- a/docs/_posts/algorithms/2021-02-07-PAI-ch9-622.md
+++ b/docs/_posts/algorithms/2021-02-07-PAI-ch9-622.md
@@ -5,7 +5,7 @@ date: 2021-02-07 20:50:00+0900
 use_math: true
 categories: [PAI, algorithms]
 ---
-- [원형 큐 디자인](#원형-큐-디자인)
+- [622 원형 큐 디자인](#622-원형-큐-디자인)
   - [문제](#문제)
   - [조건](#조건)
   - [예제](#예제)
@@ -15,7 +15,7 @@ categories: [PAI, algorithms]
     - [코드](#코드)
     - [결과](#결과)
 
-# [원형 큐 디자인](https://leetcode.com/problems/design-circular-queue/)
+# [622 원형 큐 디자인](https://leetcode.com/problems/design-circular-queue/)
 
 ## 문제
 
