--- a/docs/_posts/algorithms/2021-02-17-PAI-ch11-706.md
+++ b/docs/_posts/algorithms/2021-02-17-PAI-ch11-706.md
@@ -6,7 +6,7 @@ use_math: true
 categories: [PAI, algorithms]
 ---
 
-- [해시맵 디자인](#해시맵-디자인)
+- [706 해시맵 디자인](#706-해시맵-디자인)
   - [문제](#문제)
   - [조건](#조건)
   - [예제](#예제)
@@ -27,7 +27,7 @@ categories: [PAI, algorithms]
           - [TABLE_SIZE가 300일 경우](#table_size가-300일-경우)
           - [TABLE_SIZE가 1000일 경우](#table_size가-1000일-경우)
 
-# [해시맵 디자인](https://leetcode.com/problems/design-hashmap/)
+# [706 해시맵 디자인](https://leetcode.com/problems/design-hashmap/)
 
 ## 문제
 
