--- a/docs/_posts/algorithms/2021-02-21-PAI-ch11-771.md
+++ b/docs/_posts/algorithms/2021-02-21-PAI-ch11-771.md
@@ -6,6 +6,22 @@ use_math: true
 categories: [PAI, algorithms]
 ---
 
+- [771 보석과 돌](#771-보석과-돌)
+  - [문제](#문제)
+  - [조건](#조건)
+  - [예제](#예제)
+    - [예제 1](#예제-1)
+    - [예제 2](#예제-2)
+  - [해결](#해결)
+    - [1st](#1st)
+      - [1.1 해결해야 할 사항](#11-해결해야-할-사항)
+      - [1.2 생각](#12-생각)
+      - [1.3 구현](#13-구현)
+        - [1.3.1 dictionary 사용](#131-dictionary-사용)
+        - [1.3.2 Couter 사용](#132-couter-사용)
+        - [1.3.3 문자열 그대로 사용](#133-문자열-그대로-사용)
+        - [1.3.4 문자열 그대로 사용2](#134-문자열-그대로-사용2)
+
 # [771 보석과 돌](https://leetcode.com/problems/jewels-and-stones/)
 
 ## 문제
