--- a/docs/_posts/algorithms/2021-02-28-PAI-ch12-graph.md
+++ b/docs/_posts/algorithms/2021-02-28-PAI-ch12-graph.md
@@ -10,10 +10,13 @@ categories: [PAI, algorithms]
 
 ## 개요
 
-- 객체의 일부 쌍(pair)들이 **연관되어** 있는 객체 집합 구조
-- [위상수학(Topology)](https://blog.naver.com/khsamuel/221395058280)
-  - 연속변환(continuous transformation)에 대해 불변인
-  - 기하학적 객체의 특성을 연구
+- 그래프?
+  - 객체의 일부 쌍(pair)들이 **연관되어** 있는 객체 집합 구조
+- [위상수학(Topology)](https://blog.naver.com/khsamuel/221395058280)?
+  - 연속변환(continuous transformation)에 대해?
+  - 불변인?
+  - 기하학적 객체?
+  - 특성을 연구
 
 ## 오일러 경로
 
@@ -88,7 +91,7 @@ graph = {
 DFS(G, v)
     # v(vertex, 정점)에 방문 표시
     label v as discovered
-    # v부터 v와 인접한 모든 간선 w에 대해 
+    # 정점 v에서 -> v와 인접한 모든 정점 w로 이어지는 방향 있는(directed) 간선에 대해 
     for all directed edges from v to w that are in G.adjacentEdges(v) do
         # w에 방문 표시(label)가 없다면
         if vertex w is not labeled as discovered then
@@ -119,7 +122,7 @@ DFS-iterative(G, v)
         if v is not labeled as discovered then
             # 현재 정점 v에 방문 표시 하고
             label v as discovered
-            # v부터 v와 인접한 모든 간선 w에 대해 
+            # 정점 v에서 -> v와 인접한 모든 정점 w로 이어지는 간선 대해 
             for all edges from v to w in G.adjacentEdges(v) do
                 # 방문 체크 위해 스탭에 삽입
                 S.push(w)
@@ -172,9 +175,15 @@ def iterative_dfs(start_v):
 
 ### 정점
 
+- 그래프의 각 노드
+
 ### 간선
 
+- 노드와 노드를 잇는 선
+
 ### 차수
+
+- 정점에 부속되어 있는 간선의 수
 
 ## 참고 링크
 
