PAI - 그래프 BFS  정리 추가
CSAPP
- 2장 공부 정리

--- a/docs/_posts/algorithms/2021-02-28-PAI-ch12-graph.md
+++ b/docs/_posts/algorithms/2021-02-28-PAI-ch12-graph.md
@@ -6,6 +6,28 @@ use_math: true
 categories: [PAI, algorithms]
 ---
 
+- [그래프](#그래프)
+  - [개요](#개요)
+  - [오일러 경로](#오일러-경로)
+  - [해밀턴 경로](#해밀턴-경로)
+  - [그래프 순회](#그래프-순회)
+    - [그래프 표현 방식](#그래프-표현-방식)
+      - [인접 행렬(Adjacency Matrix)](#인접-행렬adjacency-matrix)
+      - [인접 리스트(Adjacency List)](#인접-리스트adjacency-list)
+    - [DFS(Depth First Search)](#dfsdepth-first-search)
+      - [DFS - 재귀](#dfs---재귀)
+      - [DFS - 반복(스택)](#dfs---반복스택)
+    - [BFS(Breadth-First Search)](#bfsbreadth-first-search)
+      - [BFS - 반복(큐)](#bfs---반복큐)
+      - [BFS - 재귀](#bfs---재귀)
+  - [백트래킹](#백트래킹)
+  - [제약 충족 문제(Constraint Satisfaction Problems, CSP)](#제약-충족-문제constraint-satisfaction-problems-csp)
+  - [용어](#용어)
+    - [정점](#정점)
+    - [간선](#간선)
+    - [차수](#차수)
+  - [참고 링크](#참고-링크)
+
 # 그래프
 
 ## 개요
@@ -90,8 +112,8 @@ graph = {
 ```python
 DFS(G, v)
     # v(vertex, 정점)에 방문 표시
-    label v as discovered
-    # 정점 v에서 -> v와 인접한 모든 정점 w로 이어지는 방향 있는(directed) 간선에 대해 
+    label v as discovered ''' 1. 방문 표시 '''
+    # 정점 v에서 v와 인접한 정점 w로 이어지는 모든 방향 있는(directed) 간선에 대해 
     for all directed edges from v to w that are in G.adjacentEdges(v) do
         # w에 방문 표시(label)가 없다면
         if vertex w is not labeled as discovered then
@@ -101,7 +123,7 @@ DFS(G, v)
 
 ```python
 def recursive_dfs(v, discovered = []):
-    discovered.append(v)
+    discovered.append(v) ''' 1. 방문 표시 '''
     for w in graph[v]:
         if not w in discovered:
             discovered = recursive_dfs(w, discovered)
@@ -121,10 +143,10 @@ DFS-iterative(G, v)
         # 현재 정점 v가 방문 표시 되지 않았다면
         if v is not labeled as discovered then
             # 현재 정점 v에 방문 표시 하고
-            label v as discovered
-            # 정점 v에서 -> v와 인접한 모든 정점 w로 이어지는 간선 대해 
+            label v as discovered ''' 1. 방문 표시 '''
+            # 정점 v에서 v와 인접한 정점 w로 이어지는 모든 간선 대해 
             for all edges from v to w in G.adjacentEdges(v) do
-                # 방문 체크 위해 스탭에 삽입
+                # 방문 체크 위해 스택에 삽입
                 S.push(w)
 ```
 
@@ -135,7 +157,7 @@ def iterative_dfs(start_v):
     while stack:
         v = stack.pop()
         if v not in discovered:
-            discovered.append(v)
+            discovered.append(v) ''' 1. 방문 표시 '''
             for w in graph[v]:
                 stack.append(w)
     return discovered
@@ -146,6 +168,45 @@ def iterative_dfs(start_v):
 - 주로 큐로 구현
 
 #### BFS - 반복(큐)
+
+```python
+BFS(G, start_v)
+    # Q를 큐로 선언
+    let Q be a queue
+    # start_v 방문 표시
+    label start_v as discovered  ''' 1. 방문 표시 '''
+    # Q에 삽입(선입선출)
+    Q.enqueue(start_v)
+    while Q is not empty do
+        v := Q.dequeue()
+        # v가 목적지인 경우 v 리턴
+        if v is the goal then
+            return v
+        # v가 목적지가 아닌 경우, 노드 v에서 v에 인접한 노드 w의 모든 간선에 대하여 반복
+        for all edges from v to w in G.adjacentEdges(v) do
+            # 노드 w를 방문한 적 없다면
+            if w is not labeled as discovered then
+                # 노트 w 방문 표시
+                label w as discovered ''' 2. 방문 표시 '''
+                # w의 부모 노드를 v로 붙이고
+                w.parent := v
+                # w를 큐에 삽입하여 다음 반복문에서 목적지인지 검증한다
+                Q.enqueue(w)
+
+```
+
+```python
+def iterative_bfs(start_v):
+    discovered = [start_v]  ''' 1. 방문 표시 '''
+    queue = [start_v]
+    while queue:
+        v = queue.pop(0)
+        for w in graph[v]:
+            if not w in discovered:
+                discovered.append(w) ''' 2. 방문 표시 '''
+                queue.append(w)
+    return discovered
+```
 
 #### BFS - 재귀
 
