--- a/docs/_posts/algorithms/2021-02-28-PAI-ch12-200.md
+++ b/docs/_posts/algorithms/2021-02-28-PAI-ch12-200.md
@@ -94,10 +94,19 @@ class Solution:
         
         # 육지를 지워나간다
         self.grid[i][j] = '0'
-        self.dfs(i + 1, j)
-        self.dfs(i - 1, j)
-        self.dfs(i, j + 1)
-        self.dfs(i, j - 1)
+        '''
+        사실 배열에서 
+        [ i
+          0 => ["1", "1",...], j
+          1 => ["1", "1",...], j
+          2 => ["1", "1",...]  j
+        ]
+        i는 0,1,2,... 증가하면서 아래로 내려가므로, i가 증가할 때 남으로 간다고 보겠다
+        '''
+        self.dfs(i + 1, j) # i = m = 높이, i + 1 = 남으로
+        self.dfs(i - 1, j) # i = m = 높이, i - 1 = 북으로
+        self.dfs(i, j + 1) # j = n = 너비, j + 1 = 동으로
+        self.dfs(i, j - 1) # j = n = 너비, j - 1 = 서로
 
 
 s = Solution()
