PAI - 가장 긴 팰린드롬 문자열 풀이
TS
- vscode 문제 해결

--- a/docs/_posts/algorithms/2021-02-28-PAI-ch12-200.md
+++ b/docs/_posts/algorithms/2021-02-28-PAI-ch12-200.md
@@ -1,12 +1,12 @@
 ---
-title: 200 Letter Combinations of a Phone Number
+title: 200 Number of Islands
 author: aimpugn
 date: 2021-02-28 21:00:00+0900
 use_math: true
 categories: [PAI, algorithms]
 ---
 
-- [200. Number of Islands](#200-number-of-islands)
+- [200 Number of Islands](#200-number-of-islands)
   - [문제](#문제)
   - [조건](#조건)
   - [예제](#예제)
@@ -15,7 +15,7 @@ categories: [PAI, algorithms]
       - [생각](#생각)
       - [코드](#코드)
 
-# [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
+# [200 Number of Islands](https://leetcode.com/problems/number-of-islands/)
 
 ## 문제
 
@@ -31,7 +31,7 @@ categories: [PAI, algorithms]
 
 ## 예제
 
-```
+```python
 Input: grid = [
   ["1","1","1","1","0"],
   ["1","1","0","1","0"],
