--- a/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
+++ b/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
@@ -385,7 +385,7 @@ def longestPalindrome(self, s: str) -> str:
 ## 회고
 
 - [2 생각](#2-생각)에서 대칭에 대해 정리할 때처럼, 설명 방식과 어휘 선택에 따라 문제 해결 방식이 바뀌는 거 같은데, 같은 문제라도 다르게, 다양하게 설명할 줄 알아야 할 것 같다
-- ==애초에 좌/우 포인터가 좁혀오는 것, 좌/우 포인터가 넓혀가는 것 이렇게 **경우의 수**로 나누어서 분기 처리하는 방식으로 사고하는 게 필요할 것 같다==
-- 실제 업무에서는 문제 해결을 위해 온갖 방법을 다 생각해내는데, 알고리즘 문제를 풀 때는 문제 자체에 매몰되는 느낌이다. 문제 자체보다는 ==문제 해결==에 집중하자
+- 애초에 좌/우 포인터가 좁혀오는 것, 좌/우 포인터가 넓혀가는 것 이렇게 **경우의 수로 나누어서 분기 처리하는 방식으로 사고**하는 게 필요할 것 같다
+- 실제 업무에서는 문제 해결을 위해 온갖 방법을 다 생각해내는데, 알고리즘 문제를 풀 때는 문제 자체에 매몰되는 느낌이다. 문제 자체보다는 **문제 해결**에 집중하자
 - 문제 해결 과정을 상상하자. 기상천외한 방법들을 상상하다 보면 뭐라도 나오지 않을까.
 - 일단 풀었지만, 코드를 작성하는 과정이나 최종적인 결과는 그렇게 매끄럽지 않은 것 같다. 더 풀다 보면 나아지려나
