--- a/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
+++ b/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
@@ -264,15 +264,15 @@ def second(self, s: str) -> str:
 - 과연 앞서 생각한 조건들이 꼭 필요한 조건들일까?
 
 ```python
-# 시작부터 문자열 범위 체크
-1. if idx_curr - 1 >= 0 and idx_curr + 1 < s_len:
+1. # 시작부터 문자열 범위 체크
+if idx_curr - 1 >= 0 and idx_curr + 1 < s_len:
 2. # `aba`: 좌/우에 문자 있고 left와 right는 같고 start는 다른 경우
 if s[idx_curr - 1] == s[idx_curr + 1] and target != s[idx_curr - 1]:
 3. # `abccba`: 이 경우 첫 c에서 비교하고 다음 c는 건너 띄면 되지 않을까?
 if target != s[idx_curr - 1] and target == s[idx_curr + 1]:
 ```
 
-- 풀다 보니 결국 세 케이스다
+- 풀다 보니 위에처럼 일일이 조건을 명시할 필요 없고, 결국 세 케이스다
   - `abcba`처럼 홀수로 팰린드롬인 경우
   - `abccba`처럼 짝수로 팰린드롬인 경우
   - 팰린드롬이 아닌 경우
