--- a/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
+++ b/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
@@ -186,10 +186,8 @@ def my_longestPalindrome(self, s: str) -> str:
 def second(self, s: str) -> str:
     ans = ''
     s_len = len(s)
-    mid = s_len // 2
-    if mid == 0:
+    if s_len == 1:
         return s
-    
     s_sub_palindrome = ''
     s_sub_palindrome_len = 0
     loop_cnt = 0
