--- a/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
+++ b/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
@@ -82,6 +82,8 @@ Output: [[1]]
     - 개념에 대한 이해가 부족하거나
     - 규칙에 대한 이해가 부족하거나
     - 개념이나 규칙이 아닌 다른 무엇에 대한 이해가 필요하거나
+      - 개념과 규칙 외에, **개념과 규칙을 개발 언어로 바꾸고 최적화**하는 능력은 별개
+      - 어떻게 보면 창조의 영역 같은데, 이걸 어떻게 잘할 수 있을까?(#TODO)
   - 일단 지금으로 봐서는 규칙에 대한 이해가 부족한 거 같다.
   - 모를 땐? [검색](https://www.nayuki.io/page/next-lexicographical-permutation-algorithm)
 
