--- a/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
+++ b/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
@@ -99,7 +99,7 @@ def do_permutation(nums, nums_len):
     if idx1 <= 0:
         return False
     
-    # 3. 
+    # 3. 다음 내림차순 수의 인덱스 찾기
     idx2 = nums_len - 1
     while nums[idx2] <= nums[idx1 - 1]:
         idx2 -= 1
@@ -128,7 +128,7 @@ def do_permutation(nums, nums_len):
 - 오름차순으로 정렬된 숫자를 내림차순 순열로 바꾸는 과정
 - 따라서 원래는 가장 큰 우측의 수보다 좌측의 모든 수들이 크다면, 더 이상 진행할 순열이 없다는 의미이므로 종료
 
-##### `# 3.`
+##### `# 3. 다음 내림차순 수의 인덱스 찾기`
 
 - 두번째 `while`문의 목적: **다음 내림차순 순열**을 만들기 위한 다음 수의 인덱스 찾기
 - **내림차순이 아닌 인덱스**의 수보다 큰 수의 인덱스(`nums[6] = 4`) 찾는다
@@ -147,8 +147,13 @@ def do_permutation(nums, nums_len):
 
 ##### 정리
 
+- 결국 코드 자체는 발견한 규칙과 마찬가지다. **오름차순에서 시작해서 내림차순으로 끝난다**
 - 오름차순인 수를 내림차순으로 바꿔 나간다
-- 그래서 세 while문을 정리하자면
+  - 오름차순인 부분을 찾고,
+  - 내림차순 수로 바꾸고,
+  - 나머지 수를 정순으로 만들어 다시 내림차순으로 바꿔 나간다
+- 세 while문을 정리하자면
   - `첫번째 while`문: 오름차순인 부분의 인덱스를 찾고
   - `두번째 while`문: 다음 내림차순이 될 수를 찾는다
   - `세번째 while`문: 다음 내림차순이 된 수 다음 이미 역순 정렬되어 있는 수를 정순 정렬로 바꾼다
+- 개발과 코딩에 익숙해진다는 건, 규칙을 컴퓨터에 맞게 코드를 쓸 수 있는 능력이란 건 알고 있었는데, 새삼 새롭게 느껴진다. 저 세 while문은 규칙을 컴퓨터에 맞게 필요 최소한으로 구현해 냈다. 설명을 코드로 바꾸는 능력은 어떻게 기를 수 있을까?
