--- a/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
+++ b/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
@@ -6,6 +6,29 @@ use_math: true
 categories: [PAI, algorithms]
 ---
 
+- [46 순열](#46-순열)
+  - [문제](#문제)
+  - [조건](#조건)
+  - [예제](#예제)
+  - [해결](#해결)
+    - [1st](#1st)
+      - [1 생각](#1-생각)
+        - [`# 1. 1 6 7 3 5 4 2`](#-1-1-6-7-3-5-4-2)
+        - [`# 2. 종료 케이스`](#-2-종료-케이스)
+        - [`# 3. 다음 내림차순 수의 인덱스 찾기`](#-3-다음-내림차순-수의-인덱스-찾기)
+        - [`# 4. 1 6 7 4 5 3 2`](#-4-1-6-7-4-5-3-2)
+        - [`# 5. 1 6 7 4 2 3 5`](#-5-1-6-7-4-2-3-5)
+        - [정리](#정리)
+      - [1 코드](#1-코드)
+      - [1 결과: 성공](#1-결과-성공)
+    - [2nd](#2nd)
+      - [2 생각](#2-생각)
+        - [DFS?](#dfs)
+        - [경우의 수?](#경우의-수)
+      - [2 코드](#2-코드)
+      - [2 결과: 성공](#2-결과-성공)
+  - [회고](#회고)
+
 # [46 순열](https://leetcode.com/problems/permutations/)
 
 ## 문제
@@ -157,3 +180,130 @@ def do_permutation(nums, nums_len):
   - `두번째 while`문: 다음 내림차순이 될 수를 찾는다
   - `세번째 while`문: 다음 내림차순이 된 수 다음 이미 역순 정렬되어 있는 수를 정순 정렬로 바꾼다
 - 개발과 코딩에 익숙해진다는 건, 규칙을 컴퓨터에 맞게 코드를 쓸 수 있는 능력이란 건 알고 있었는데, 새삼 새롭게 느껴진다. 저 세 while문은 규칙을 컴퓨터에 맞게 필요 최소한으로 구현해 냈다. 설명을 코드로 바꾸는 능력은 어떻게 기를 수 있을까?
+
+#### 1 코드
+
+```python
+def permute(self, nums: List[int]) -> List[List[int]]:
+    nums = sorted(nums)
+    ans = [nums[:]]
+    def do_permutation(nums_curr, nums_len):
+        # 1. 1 6 7 3 5 4 2
+        idx1 = nums_len - 1
+        while idx1 > 0 and nums_curr[idx1 - 1] >= nums_curr[idx1]:
+            idx1 -= 1
+
+        # 2. 종료 케이스
+        if idx1 <= 0:
+            return False
+
+        # 3. 
+        idx2 = nums_len - 1
+        while nums_curr[idx2] <= nums_curr[idx1 - 1]:
+            idx2 -= 1
+
+        # 4. 1 6 7 4 5 3 2
+        nums_curr[idx1 - 1], nums_curr[idx2] = nums_curr[idx2], nums_curr[idx1 - 1]
+
+        # 5. 1 6 7 4 2 3 5
+        idx2 = nums_len - 1
+        while idx1 < idx2:
+            nums_curr[idx1], nums_curr[idx2] = nums_curr[idx2], nums_curr[idx1]
+            idx1 += 1
+            idx2 -= 1
+            
+        ans.append(nums_curr[:])
+        
+        return True
+    
+    
+    while result := do_permutation(nums, len(nums)):
+        continue
+    
+    return ans
+```
+
+#### 1 결과: 성공
+
+> 25 / 25 test cases passed.  
+> Status: Accepted  
+> Runtime: 40 ms  
+> Memory Usage: 14.2 MB
+
+### 2nd
+
+#### 2 생각
+
+- DFS로 구현을 해보자
+- 모든 경우의 수를 조합해 나가면 되지 않을까? 그러면 어떻게 모든 경우의 수를 DFS로 조합할 수 있을까?
+
+##### DFS?
+
+- Depth First Search, 깊이 우선 탐색
+- 방식은?
+  - 자료 구조를 그래프로 볼 때
+  - 우선 가장 말단의 노드(리프 노드)까지 도달하여 종료 조건을 만나 백 트래킹할 때까지
+  - 재귀적으로 함수를 호출하여
+  - 원하는 데이터를 탐색하는 방법
+
+##### 경우의 수?
+
+- DFS로 경우의 수를 만든다면 아래와 같이 자기 자신을 제외한 수가 자식 노드로 붙어 가는 형식이 될 것이다.
+
+```
+depth
+1       [  1,             2,             3  ]
+2       [2]  [3]        [1]  [3]     [1]  [2]
+3       [3]  [2]        [3]  [1]     [2]  [1]
+        종료 종료       종료 종료     종료 종료
+```
+
+- 종료 지점은?
+  - 전달된 배열 nums(`[1, 2, 3]`)의 길이와 depth가 같아지는 경우
+
+#### 2 코드
+
+```python
+def second(self, nums: List[int]) -> List[List[int]]:
+    ans = []
+    nums_len = len(nums)
+    '''
+    nums: 원본 배열. 요소를 계속 붙여 나가야 하므로 계속 전달
+    permutaion: 순열을 만들어 나갈 배열
+    depth: 백 트래킹 조건
+    '''
+    def dfs(nums, permutaion, depth):
+        # 배열의 길이만큰 깊어지면 종료
+        if depth == nums_len:
+            ans.append(permutaion[:])
+            return
+
+        for num in nums:
+            if not num in permutaion:
+                """
+                permutaion.append(num) (X) 
+                    - append를 하면 기존 permutation에 추가되고, 유지된다. 
+                    - 리프 노드에서 백 트래킹 후 기존 permutation 배열이 있어야 하므로, 전달 시에는 이전 배열 유지 위해 + 연산자 사용
+                """
+                dfs(nums, permutaion + [num], depth + 1)
+
+    dfs(nums, [], 0)
+
+    return ans
+```
+
+#### 2 결과: 성공
+
+> 25 / 25 test cases passed.  
+> Status: Accepted  
+> Runtime: 32 ms  
+> Memory Usage: 14.3 MB  
+
+## 회고
+
+- dfs가 더 빠른 것 같지만, 함수 콜 스택이 많이 쌓이면 안 좋다고 들었던 거 같다
+  - [Efficiency: recursion vs loop](https://stackoverflow.com/questions/9386375/efficiency-recursion-vs-loop)
+- 알고리즘 공부를 통해 배울 것은 결국 아래 세 가지일 것 같다
+  - 문제에 해당하는 샘플들을 통해 규칙을 찾고,
+  - 규칙을 사람의 말로 설명하고,
+  - 그 설명을 컴퓨터에 맞는 코드로 변환
