PAI - 순열 정리 - 조합 공부 준비 CSAPP - 2장 공부

--- a/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
+++ b/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
@@ -27,6 +27,9 @@ categories: [PAI, algorithms]
         - [경우의 수?](#경우의-수)
       - [2 코드](#2-코드)
       - [2 결과: 성공](#2-결과-성공)
+    - [3rd](#3rd)
+      - [3 itertools](#3-itertools)
+      - [3 코드](#3-코드)
   - [회고](#회고)
 
 # [46 순열](https://leetcode.com/problems/permutations/)
@@ -298,6 +301,20 @@ def second(self, nums: List[int]) -> List[List[int]]:
 > Status: Accepted  
 > Runtime: 32 ms  
 > Memory Usage: 14.3 MB  
+
+### 3rd
+
+#### 3 itertools
+
+- [itertools](https://docs.python.org/ko/3/library/itertools.html)에는 permuation과 combination 등 유용한 함수들 있다
+- [permuation의 소스 코드](https://github.com/python/cpython/blob/master/Modules/itertoolsmodule.c#L3358)는 링크 참조
+
+#### 3 코드
+
+```python
+def third(self, nums: List[int]) -> List[List[int]]:
+    return list(map(list, itertools.permutations(nums)))
+```
 
 ## 회고
 
