--- a/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
+++ b/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
@@ -121,18 +121,20 @@ def do_permutation(nums, nums_len):
     while idx1 > 0 and nums[idx1 - 1] >= nums[idx1]:
         idx1 -= 1
 
-    # 2. 종료 케이스
+    # 2. idx1이 0보다 작으면 모두 내림차순으로 종료 케이스
     if idx1 <= 0:
         return False
     
-    # 3. 다음 내림차순 수의 인덱스 찾기
+    # 3. 찾아낸 오름차순인 수보다 큰 수가 우측에 있으면, `다음 내림차순` 준비
     idx2 = nums_len - 1
     while nums[idx2] <= nums[idx1 - 1]:
         idx2 -= 1
 
+    # 다음 내림차순 위한 치환
     # 4. 1 6 7 4 5 3 2
     nums[idx1 - 1], nums[idx2] = nums[idx2], nums[idx1 - 1]
     
+    # 다음 내림차순이 시작된 후 idx1과 idx2 사이의 숫자는 다시 정순으로 정렬되어야 다음 순열이 진행되므로, 뒤집는다
     # 5. 1 6 7 4 2 3 5
     idx2 = nums_len - 1
     while idx1 < idx2:
@@ -147,7 +149,7 @@ def do_permutation(nums, nums_len):
 
 ##### `# 1. 1 6 7 3 5 4 2`
 
-- 첫번째 `while`문의 목적: **내림차순이 아닌 인덱스**(`nums[4] = 3`) 찾기
+- 첫번째 `while`문의 목적: **오름차순인 인덱스**(`nums[4] = 3`) 찾기
 
 ##### `# 2. 종료 케이스`
 
