--- a/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
+++ b/docs/_posts/algorithms/2021-03-07-PAI-ch12-46.md
@@ -247,7 +247,7 @@ def permute(self, nums: List[int]) -> List[List[int]]:
 - Depth First Search, 깊이 우선 탐색
 - 방식은?
   - 자료 구조를 그래프로 볼 때
-  - 우선 가장 말단의 노드(리프 노드)까지 도달하여 종료 조건을 만나 백 트래킹할 때까지
+  - 가장 말단의 노드(리프 노드)까지 도달하여 종료 조건을 만나 백 트래킹할 때까지
   - 재귀적으로 함수를 호출하여
   - 원하는 데이터를 탐색하는 방법
 
@@ -280,7 +280,7 @@ def second(self, nums: List[int]) -> List[List[int]]:
     def dfs(nums, permutaion, depth):
         # 배열의 길이만큰 깊어지면 종료
         if depth == nums_len:
-            ans.append(permutaion[:])
+            ans.append(permutaion)
             return
 
         for num in nums:
