PAI - 743 문서 정리

--- a/docs/_posts/algorithms/2021-03-14-PAI-ch13-743.md
+++ b/docs/_posts/algorithms/2021-03-14-PAI-ch13-743.md
@@ -22,6 +22,8 @@ categories: [PAI, algorithms]
       - [2 결과: 성공](#2-결과-성공)
     - [3rd](#3rd)
       - [책의 코드](#책의-코드)
+    - [4th](#4th)
+      - [Dijkstra 알고리즘대로 구현](#dijkstra-알고리즘대로-구현)
 
 # [743 Network Delay Time](https://leetcode.com/problems/network-delay-time/)
 
@@ -32,9 +34,9 @@ categories: [PAI, algorithms]
 > We will send a signal from a given node k.  
 > Return the time it takes for all the n nodes to receive the signal. If it is impossible for all the n nodes to receive the signal, return `-1`.
 
-- times[0] = ui = 시작 노드
-- times[1] = vi = 타겟 노드
-- times[2] = wi = 소요 시간
+- times[i][0] = ui = 시작 노드
+- times[i][1] = vi = 타겟 노드
+- times[i][2] = wi = 소요 시간
 - k: 시작 노드
 - n: 노드의 수
 - -1: 불가능할 경우
@@ -154,7 +156,8 @@ def Dijkstra(Graph, source):
     u = Q.extract_min()
     for neighbor in u:
       alt = dist[u] + length(u, neighbor) # `u`까지의 거리에 `u`와 `v` 간의 거리를 더한다
-      if alt < dist[neighbor]:            # 
+      if alt < dist[neighbor]:  # 새로 구한 값이 기존 인접 노드까지의 거리보다 작다면
+        # 값과 이전 노드를 바꾼다
         dist[neighbor] = alt
         prev[neighbor] = u
         Q.decrease_priority(neighbor, alt)
@@ -167,7 +170,7 @@ def Dijkstra(Graph, source):
 
 > Heaps are arrays for which a[k] <= a[2*k+1] and a[k] <= a[2*k+2] for all k, counting elements from 0.  
 
-- 모든 원소 `k`에 대하여, `a[k]`의 값은 항상 `2 * (k + 1)`과 `2 * (k + 2)`보다 작거나 같다
+- 모든 원소 `k`에 대하여, `a[k]`의 값은 항상 `a[2 * (k + 1)]`과 `a[2 * (k + 2)]`보다 작거나 같다
 
 > For the sake of comparison, non-existing elements are considered to be infinite. The interesting property of a heap is that a[0] is always its smallest element.
 
@@ -302,3 +305,7 @@ def answer(self, times: List[List[int]], n: int, k: int) -> int:
         return -1
 
 ```
+
+### 4th
+
+#### Dijkstra 알고리즘대로 구현
