--- a/docs/_posts/algorithms/2021-03-14-PAI-ch13-743.md
+++ b/docs/_posts/algorithms/2021-03-14-PAI-ch13-743.md
@@ -228,15 +228,16 @@ def _siftdown(heap, startpos, pos):
         # (자식 인덱스 - 1)을 1비트 우로 움직여서 2로 나눈다
         parentpos = (pos - 1) >> 1 
         parent = heap[parentpos]
-        if newitem < parent:
-            heap[pos] = parent
-            pos = parentpos
+        if newitem < parent: # 새로운 항목이 기존의 부모 값보다 작다?
+            heap[pos] = parent # 부모 값을 자식 위치로 보내고
+            pos = parentpos # 다음 위치를 부모 인덱스로 변경한다
             continue
         break
     heap[pos] = newitem
 ```
 
 - heap에 새로운 항목을 추가하고, 재탐색하여 힙의 불변성을 복원
+- 부모 값이 더 크면 부모 값을 자식으로 보내고, 자식의 `pos`를 계속 찾아 올라간다
 
 ```python
 heappush(heap, 3)
@@ -249,7 +250,7 @@ heappush(heap, 6)
 # [3, 4, 5, 6]
 heappush(heap, 2)
 # [3, 4, 5, 6, 2] heap 끝에 새로운 항목 추가
-# [3, 4, 5, 6, 4] ((5-1)-1)/2=부모 위치=1. heap[1]=4. 4가 더 크므로 뒤로 보낸다. 2는 미정.
+# [3, 4, 5, 6, 4] ((5-1)-1)/2=부모 위치=1. heap[1]=4. 4가 더 크므로 자식 위치로 보낸다. 2는 미정.
 # [3, 3, 5, 6, 4] while문 돌아서 pos는 1, 부모는 0, a[0]=3 < 2이므로 a[1]=3으로 치환. 2는 미정.
 # [2, 3, 5, 6, 4] while문 돌아서 pos는 0, 부모는 0, while문 종료, a[0]=2
 """ 
