PAI - 110 문제 풀이 수정

--- a/docs/_posts/algorithms/2021-03-22-PAI-ch14-110.md
+++ b/docs/_posts/algorithms/2021-03-22-PAI-ch14-110.md
@@ -235,6 +235,9 @@ def isBalanced(self, root: TreeNode) -> bool:
         if not node.right and not node.left:
             return depth
         
+        # 좌 또는 우 노드 하나만 있어도 위의 if문을 통과하므로,
+        # 깊이가 깊어져도, depth가 계속 유지되는 것 같지만,
+        # return하다보면 dfs를 들어가지 못해서 좌 또는 우 어떤 노드에 과거 값이 남아 있어서 차이가 발생하면 False 반환
         dfs_left = depth
         dfs_right = depth
         if node.left:
@@ -247,7 +250,7 @@ def isBalanced(self, root: TreeNode) -> bool:
             return False
         
         if abs(dfs_left - dfs_right) <= 1:
-            return max(dfs_left, dfs_right)
+            return max(dfs_left, dfs_right) # 이렇게 int 또는 bool 타입으로 반환하는 것은 별로 안 좋은 거 같다. 다음부터는 리턴 타입의 일관성도 고려 필요.
         else:
             return False
 
