--- a/docs/_posts/algorithms/2021-03-28-PAI-ch14-310.md
+++ b/docs/_posts/algorithms/2021-03-28-PAI-ch14-310.md
@@ -85,7 +85,7 @@ Output: [0,1]
 #### 1 코드
 
 ```python
-def time_limit_case(self, n: int, edges: List[List[int]]) -> List[int]:
+def first(self, n: int, edges: List[List[int]]) -> List[int]:
     # Wrong Answer
     if n == 1:
         return [0]
@@ -356,7 +356,7 @@ for i in range(10):
     t1 = time.time()
     sol_by_book += t1 - t0
     t0 = time.time()
-    print(s.solution_time_limit(1515, case_time_limit))
+    print(s.first(1515, case_time_limit))
     t1 = time.time()
     sol_by_me += t1 - t0
 
