--- a/docs/_posts/algorithms/2021-03-22-PAI-ch14-110.md
+++ b/docs/_posts/algorithms/2021-03-22-PAI-ch14-110.md
@@ -290,3 +290,6 @@ def solution_by_book(self, root: TreeNode) -> bool:
 
 - 기저 케이스를 0으로 두고, 1씩 높이면서 높이를 측정해 나간다
 - 좌/우 높이 차가 1보다 크면 -1을 반환
+- 결국 핵심은,
+  - 좌/우 서브트리의 높이를 계속 빼서 그 차가 1보다 큰지 확인하는 `abs(left - right) > 1`
+  - 그리고 만약 차이가 1보다 크지 않다면, 더 큰 높이를 반환하는 `max(left, right) + 1`
