--- a/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
+++ b/docs/_posts/algorithms/2021-03-04-PAI-ch6-5.md
@@ -23,7 +23,9 @@ categories: [PAI, algorithms]
       - [3 생각](#3-생각)
       - [3 코드](#3-코드)
       - [3 결과: 성공](#3-결과-성공)
-    - [4 리트코드 결과 중 최단 시간 기록 코드](#4-리트코드-결과-중-최단-시간-기록-코드)
+    - [다른 사람의 코드](#다른-사람의-코드)
+      - [리트코드 결과 중 최단 시간 기록 코드](#리트코드-결과-중-최단-시간-기록-코드)
+        - [프로그래머스에서 가장 간단한 코드](#프로그래머스에서-가장-간단한-코드)
   - [회고](#회고)
 
 # [가장 긴 팰린드롬 부분 문자열](https://leetcode.com/problems/longest-palindromic-substring/)
@@ -280,66 +282,89 @@ if target != s[idx_curr - 1] and target == s[idx_curr + 1]:
 #### 3 코드
 
 ```python
-    def third(self, s: str) -> str:
-        ans = ''
-        s_len = len(s)
-        # 문자열이 1개면 굳이 아래 로직 따를 필요 없다
-        mid = s_len // 2
-        if mid == 0:
-            return s
+def third(self, s: str) -> str:
+    print(s)
+    ans = ''
+    s_len = len(s)
+    # 문자열이 1개면 굳이 아래 로직 따를 필요 없다
+    if s_len == 1:
+        return s
 
-        palindrome_len = 0
-        loop_cnt = 0
-        # 중앙을 기점으로 하지 말고 제일 앞에서부터 끝까지 모두 훑어보자
-        target = s[loop_cnt]
-        while loop_cnt < s_len:
-            # 초기값 설정. 이걸 하지 않으면 아래에서 `ac` 같은 경우 빈 값으로 나온다
-            if palindrome_len == 0 and loop_cnt == 0:
-                ans = target
+    palindrome_len = 0
+    loop_cnt = 0
+    # 중앙을 기점으로 하지 말고 제일 앞에서부터 끝까지 모두 훑어보자
+    """
+    abcddce가 있으면
+    a -> False
+    b 
+        -> abc -> False
+        -> bc -> False
+    c 
+        -> bcd -> False
+        -> cd -> False
+    d 
+        -> cdb -> False
+        -> db -> True -> cddc -> True -> bcddce -> while문 벗어남
 
-            idx_left = loop_cnt - 1
-            idx_right = loop_cnt + 1
-            is_palindrome = False
-            while idx_left >= 0 and idx_right < s_len:
-                if s[idx_left] == s[idx_right]:
-                    is_palindrome = True
-                    idx_left -= 1
-                    idx_right += 1
-                else:
-                    break
-            
-            if is_palindrome:
-                tmp_len = idx_right - idx_left + 1
-                if palindrome_len < tmp_len:
-                    palindrome_len = tmp_len
-                    # while문 안에서 is_palindrome 체크하고 left 및 right로 이동하므로, 
-                    # break된 후에는 각각 이전 포인터를 인덱스로 삼아야 한다
-                    ans = s[idx_left + 1:idx_right]
+    """
+    target = s[loop_cnt]
+    while loop_cnt < s_len:
+        # 초기값 설정. 이걸 하지 않으면 아래에서 `ac` 같은 경우 빈 값으로 나온다
+        if palindrome_len == 0 and loop_cnt == 0:
+            ans = target
 
-            idx_left = loop_cnt
-            idx_right = loop_cnt + 1
-            is_palindrome = False
-            while idx_left >= 0 and idx_right < s_len:
-                if s[idx_left] == s[idx_right]:
-                    is_palindrome = True
-                    idx_left -= 1
-                    idx_right += 1
-                else:
-                    break
-            
-            if is_palindrome:
-                tmp_len = idx_right - idx_left + 1
-                if palindrome_len < tmp_len:
-                    palindrome_len = tmp_len
-                    ans = s[idx_left + 1:idx_right]
-
-            loop_cnt += 1
-            if loop_cnt < s_len:
-                target = s[loop_cnt]
+        # 20210408: 이전에는 당연했던 코드가 오늘은 생소하다. fourth에서 개선
+        # 홀수개인 경우를 훑어 본다
+        idx_left = loop_cnt - 1
+        idx_right = loop_cnt + 1
+        is_palindrome = False
+        while idx_left >= 0 and idx_right < s_len:
+            print("1. s[{}]: {}, s[{}]: {}".format(idx_left, s[idx_left], idx_right, s[idx_right]))
+            if s[idx_left] == s[idx_right]:
+                is_palindrome = True
+                idx_left -= 1
+                idx_right += 1
             else:
                 break
+        print('1. is_palindrome: {}'.format(is_palindrome))
+        if is_palindrome:
+            tmp_len = idx_right - idx_left + 1
+            if palindrome_len < tmp_len:
+                palindrome_len = tmp_len
+                # while문 안에서 is_palindrome 체크하고 left 및 right로 이동하므로, 
+                # break된 후에는 각각 이전 포인터를 인덱스로 삼아야 한다
+                ans = s[idx_left + 1:idx_right]
+                print('1. s[{}:{}] = ans: {}'.format(idx_left + 1, idx_right, ans))
 
-        return ans
+        # 짝수개인 경우를 훑어 본다
+        idx_left = loop_cnt
+        idx_right = loop_cnt + 1
+        is_palindrome = False
+        while idx_left >= 0 and idx_right < s_len:
+            print("2. s[{}]: {}, s[{}]: {}".format(idx_left, s[idx_left], idx_right, s[idx_right]))
+            if s[idx_left] == s[idx_right]:
+                is_palindrome = True
+                idx_left -= 1
+                idx_right += 1
+            else:
+                break
+        
+        print('2. is_palindrome: {}'.format(is_palindrome))
+        if is_palindrome:
+            tmp_len = idx_right - idx_left + 1
+            if palindrome_len < tmp_len:
+                palindrome_len = tmp_len
+                ans = s[idx_left + 1:idx_right]
+                print('2. s[{}:{}] = ans: {}'.format(idx_left + 1, idx_right, ans))
+
+        loop_cnt += 1
+        if loop_cnt < s_len:
+            target = s[loop_cnt]
+            print("target = s[{}]: {}".format(loop_cnt, target))
+        else:
+            break
+
+    return ans
 ```
 
 #### 3 결과: 성공
@@ -347,7 +372,9 @@ if target != s[idx_curr - 1] and target == s[idx_curr + 1]:
 >Runtime: 760 ms, faster than 90.20% of Python3 online submissions for Longest Palindromic Substring.  
 Memory Usage: 14.4 MB, less than 63.02% of Python3 online submissions for Longest Palindromic Substring.
 
-### 4 리트코드 결과 중 최단 시간 기록 코드
+### 다른 사람의 코드
+
+#### 리트코드 결과 중 최단 시간 기록 코드
 
 ```python
 def longestPalindrome(self, s: str) -> str:
@@ -379,6 +406,18 @@ def longestPalindrome(self, s: str) -> str:
 - 포인터를 굳이 양쪽으로 펼치지 않고, 오른쪽로만 확장해 나가면서 정순과 역순으로 문자열을 비교한다
   - 어차피 문자열 내의 전체 문자를 순회해야 하는 거라면, 굳이 포인터 두 개를 쓸 필요는 없는 거 같다
 - 기록된 실행 시간은 무려 44ms로 내 코드의 약 1/20 실행 시간
+
+##### 프로그래머스에서 가장 간단한 코드
+
+```python
+def longest_palindrom(s):
+    # 함수를 완성하세요
+    return len(s) if s[::-1] == s else max(longest_palindrom(s[:-1]), longest_palindrom(s[1:]))
+```
+
+- 어처구니 없을 정도로 간단하게 풀었다
+- 가장 긴 팰린드롬에서 확인해야 할 것은 **부분 문자열**
+- 결국 부분 문자열을 어떻게 확인해나갈 것인가였는데, 이 코드는 재귀적으로 좌/우 하나씩 줄여가며 가장 긴 값을 남기도록 했다.
 
 ## 회고
 
