--- a/docs/_posts/algorithms/2021-04-06-PAI-ch16-336.md
+++ b/docs/_posts/algorithms/2021-04-06-PAI-ch16-336.md
@@ -27,11 +27,11 @@ categories: [PAI, algorithms]
       - [4 생각](#4-생각)
       - [4 책 풀이 코드](#4-책-풀이-코드)
       - [4 그 외 리트코드 솔루션](#4-그-외-리트코드-솔루션)
-    - [회고](#회고)
-      - [중첩 반복문의 경우](#중첩-반복문의-경우)
-      - [트라이의 경우](#트라이의-경우)
-        - [자료구조 측면에서](#자료구조-측면에서)
-        - [어떻게 측면에서](#어떻게-측면에서)
+  - [회고](#회고)
+    - [중첩 반복문의 경우](#중첩-반복문의-경우)
+    - [트라이의 경우](#트라이의-경우)
+      - [자료구조 측면에서](#자료구조-측면에서)
+      - [어떻게 측면에서](#어떻게-측면에서)
 
 # [336. Palindrome Pairs](https://leetcode.com/problems/palindrome-pairs/)
 
@@ -416,7 +416,7 @@ class TrieNode:
 #### 4 그 외 리트코드 솔루션
 
 ```python
-# leetcode_sol1 average in 100: 0.016300982999998936 sec, 2,000 단어에 약 27,610 반복
+# leetcode_sol1 average in 100: 0.016300982999998936 sec, 4,000 단어에 약 27,610 반복
 def leetcode_sol1(self, words: List[str]) -> List[List[int]]:
     start = timer()
     loop_cnt = 0
@@ -441,7 +441,7 @@ def leetcode_sol1(self, words: List[str]) -> List[List[int]]:
 
     return [list(p) for p in indices]
 
-# leetcode_sol2 average in 100: 0.030206388999999945 sec, 2,000 단어에 약 61,750 반복
+# leetcode_sol2 average in 100: 0.030206388999999945 sec, 4,000 단어에 약 61,750 반복
 def leetcode_sol2(self, words: List[str]) -> List[List[int]]:
     loop_cnt = 0
     start = timer()
@@ -465,25 +465,26 @@ def leetcode_sol2(self, words: List[str]) -> List[List[int]]:
     return result
 ```
 
-### 회고
+## 회고
 
 - 중첩 반복문으로도 풀리고 트라이로도 풀리는 문제였다
 
-#### 중첩 반복문의 경우
+### 중첩 반복문의 경우
 
 - 더 줄일 수 없을 거 같았는데, 짜잔! 퍼포먼스는 더 좋았다...
+- 단어를 앞/뒤로 붙일 생각만 했지, 테이블에 역순 단어를 넣어두고 단어를 줄여가며 팰린드롬을 체크하는 방법은 생각을 못했다
 
-#### 트라이의 경우
+### 트라이의 경우
 
 - 역으로 단어를 넣는 것까지는 생각을 해봤지만, 이후 트라이를 효과적으로 사용하지 못한 것 같다
 - 알고리즘은 **자료구조**와 **어떻게**가 대부분인 것으로 보이는데, 둘 다 미진했다.
 
-##### 자료구조 측면에서
+#### 자료구조 측면에서
 
 - 그래프보다 직관적이지만, "a" + "ba" 같이 `트라이 내부를 탐색하지 못하는 케이스`에 대한 예외 처리가 미흡했다.
 - 자료구조 통해 가능한 것을 최대한 활용하고, 그럼에도 안 되는 게 있다면 **어떻게**의 측면에서 해결할 수밖에 없을 거 같다
 
-##### 어떻게 측면에서
+#### 어떻게 측면에서
 
 - 자료구조 생성까지는 아무나 할 수 있지만, 완성된 자료 구조로 문제 해결하는 것은 아무나 못하는 것 같다.
 - 돌이켜 생각했을 때 이 문제 풀이의 **어떻게**는 어떻게 나왔을까?
@@ -491,7 +492,7 @@ def leetcode_sol2(self, words: List[str]) -> List[List[int]]:
   - 케이스별로 공략한다
 - 책에서는 3가지 케이스로 나눴고, 이 코드를 보면서 나는 아래처럼 정리가 됐다
 
-|     | 책                                                       | 나                                                                       |
+|     | 책                                                       | 책을 읽은 내 생각                                                        |
 | --- | -------------------------------------------------------- | ------------------------------------------------------------------------ |
 | 1   | 끝까지 탐색했을 때 word_id가 있는 경우                   | word의 길이와 == Trie 내의 단어 길이                                     |
 | 2   | 끝까지 탐색했을 때 palindrome_word_ids가 있는 경우       | word의 길이 == 1. word만 붙였을 때 바로 팰린드롬이 완성되어야 함         |
